; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_wrk.c_reconnect_socket.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_wrk.c_reconnect_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 (%struct.TYPE_10__*)* }
%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@AE_WRITABLE = common dso_local global i32 0, align 4
@AE_READABLE = common dso_local global i32 0, align 4
@sock = common dso_local global %struct.TYPE_11__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, %struct.TYPE_10__*)* @reconnect_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reconnect_socket(%struct.TYPE_9__* %0, %struct.TYPE_10__* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %4, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AE_WRITABLE, align 4
  %12 = load i32, i32* @AE_READABLE, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @aeDeleteFileEvent(i32 %7, i32 %10, i32 %13)
  %15 = load i32 (%struct.TYPE_10__*)*, i32 (%struct.TYPE_10__*)** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @sock, i32 0, i32 0), align 8
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %17 = call i32 %15(%struct.TYPE_10__* %16)
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @close(i32 %20)
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %24 = call i32 @connect_socket(%struct.TYPE_9__* %22, %struct.TYPE_10__* %23)
  ret i32 %24
}

declare dso_local i32 @aeDeleteFileEvent(i32, i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @connect_socket(%struct.TYPE_9__*, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
